--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,8 @@ dfn {
  * Add the correct background and color in IE 9-.
  */
 mark {
-  background-color: #ff0;
-  color: #000; }
+  background-color: #808000;
+  color: #8FBC8F; }
 
 /**
  * Add the correct font size in all browsers.
