--- a/css/style.css
+++ b/css/style.css
@@ -507,7 +507,7 @@ BUTTON DEFAULTS
   .button:hover, .button-secondary:hover, .button-tertiary:hover, .button__outline:hover, .button:focus, .button-secondary:focus, .button-tertiary:focus, .button__outline:focus {
     color: #fff;
     text-decoration: none;
-    background-color: #21653f; }
+    background-color: #F0E68C; }
   .button:active, .button-secondary:active, .button-tertiary:active, .button__outline:active {
     top: 1px; }
 
@@ -524,7 +524,7 @@ BUTTON DEFAULTS
 .button__outline {
   background-color: transparent;
   border: 3px solid seagreen;
-  color: seagreen; }
+  color: powderblue; }
   .button__outline:hover {
     background-color: seagreen;
     color: #fff; }
@@ -619,7 +619,7 @@ th {
 
 .highlight .gd {
   color: #2e3436;
-  background-color: #0e1416; }
+  background-color: #FFA07A; }
 
 .highlight .gr {
   color: #eeeeec;
@@ -634,7 +634,7 @@ th {
   background-color: #2c3032; }
 
 .highlight .kt {
-  color: #e3e7df; }
+  color: #B0C4DE; }
 
 .highlight .ni {
   color: #888a85; }
@@ -658,7 +658,7 @@ th {
 
 .highlight .m, .highlight .nb, .highlight .no, .highlight .mf, .highlight .mh, .highlight .mi, .highlight .mo,
 .highlight .il {
-  color: #8ae234; }
+  color: #66CDAA; }
 
 .highlight .o {
   color: #989DAA; }
@@ -686,7 +686,7 @@ body {
     margin: 0 0 2rem; }
 
 ::-moz-selection {
-  background: seagreen;
+  background: skyblue;
   color: white; }
 
 ::selection {
@@ -704,7 +704,7 @@ img, video, audio, iframe, object {
 LINK STYLING
 ***************/
 a {
-  color: seagreen; }
+  color: yellow; }
   a:hover {
     color: #1b5233; }
 
@@ -756,14 +756,14 @@ MENU STYLING
   background-color: seagreen;
   border-radius: 4px;
   padding: 0 .5em;
-  color: white;
+  color: skyblue;
   text-decoration: none;
   position: relative;
   right: 2rem;
   transition: all 0.2s ease-in-out; }
   .nav-toggle:hover {
     color: white;
-    background-color: #21653f; }
+    background-color: #F0E68C; }
 
 /***************
 LIST STYLING
@@ -868,7 +868,7 @@ POST STYLING
     text-align: center;
     font-size: .9em;
     font-style: italic;
-    color: #5e5e5e; }
+    color: #F08080; }
   .post figure img {
     margin: 0 auto;
     display: block; }
